--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+  "express": "^4.17.1",
+  "express-session": "^1.17.2",
+  "node-fetch": "^2.6.1"
   },
   "engines": {
     "node": "14.x"
